Misc. generics fixups