@@ -1,5 +1,6 @@
 package io.quarkus.runtime.configuration;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -70,7 +71,7 @@ public final class ConfigUtils {
             return config.getValue(configName, objectType);
         }
 
-        final Converter<T> converter = getConverterOfType(objectType, (Class) converterClass);
+        final Converter<T> converter = getConverterOfType(objectType, converterClass);
         final String rawValue = config.getValue(configName, String.class);
         return converter.convert(rawValue);
     }
@@ -91,7 +92,7 @@ public final class ConfigUtils {
             return config.getOptionalValue(configName, objectType);
         }
 
-        final Converter<T> converter = getConverterOfType(objectType, (Class) converterClass);
+        final Converter<T> converter = getConverterOfType(objectType, converterClass);
         final String rawValue = config.getValue(configName, String.class);
         return Optional.ofNullable(converter.convert(rawValue));
     }
@@ -150,13 +151,16 @@ public final class ConfigUtils {
     }
 
     public static <T> Converter<T> newConverterInstance(Class<T> type, Class<? extends Converter<T>> converterClass) {
+        // todo: this gets cleaned up with the SmallRye Config update
         if (HyphenateEnumConverter.class.equals(converterClass)) {
-            return (Converter<T>) new HyphenateEnumConverter((Class<Enum<?>>) type);
+            @SuppressWarnings("unchecked")
+            final Converter<T> converter = new HyphenateEnumConverter(type);
+            return converter;
         }
 
         try {
-            return (Converter<T>) converterClass.newInstance();
-        } catch (InstantiationException | IllegalAccessException e) {
+            return converterClass.getConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
             throw new IllegalArgumentException(e);
         }
     }
